Fix scroll to block, hide not active step n registration on mobile

--- a/assets/src/sass/modules/registration-breadcrumbs.sass
+++ b/assets/src/sass/modules/registration-breadcrumbs.sass
@@ -20,10 +20,14 @@
 			margin-bottom: 10px
 			&:last-of-type
 				margin-bottom: 0
+		+breakpoint-max(767)
+			display: none
 
 		&.active
 			background: $pink
 			color: $white
+			+breakpoint-max(767)
+				display: block
 
 		&.second
 
